fixed input drag with icon wrong position when scroll popup content

--- a/src/gutenberg/components/input-drag/editor.scss
+++ b/src/gutenberg/components/input-drag/editor.scss
@@ -1,4 +1,6 @@
 .ghostkit-component-input-drag-has-icon {
+  position: relative;
+
   svg {
     position: absolute;
     margin: 10px;
